# libsqrt

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  README.md
cmake/: GoogleTest-CMakeLists.txt.in  SqrtConfig.cmake.in
include/sqrt/: sqrt.h
jenkins/: build.sh  test.sh
src/: sqrt.cpp
test/: CMakeLists.txt
test/src/: test_sqrt.cpp
